# NauLib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeRC.cmake  README.md  compile.sh  main.cpp  test.js
scripts/: compileTs.ps1  compileTs.sh  main.ts
src/: CMakeLists.txt  GlobalMapper.cpp  GlobalMapper.h  V8Manager.cpp  V8Manager.h
src/util/: FileService.cpp  FileService.h  Logger.cpp  Logger.h
typescript/: main.ts  package-lock.json  package.json  tsconfig.json
typescript/src/: App.ts
typescript/src/scripts/: Test.ts
typescript/types/: Script.ts
